chore: apply intellij linter suggestions